force/main/default/objects/PageLayoutUpdate__e/PageLayoutUpdate__e.object-meta.xml
<CustomObject>
    <description>Indicates the result of page layout operations</description>
    <label>Page Layout Update</label>
    <pluralLabel>Page Layout Updates</pluralLabel>
</CustomObject>