force/main/default/objects/PageLayoutUpdate__e/fields/DeployResult__c.field-meta.xml
<CustomField>
    <fullName>DeployResult__c</fullName>
    <description>Describes the result of a page layout update</description>
    <label>Deploy Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>