force/main/default/objects/PageLayoutUpdate__e/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>Describes the result of a page layout update</description>
    <label>Messages</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>