force/main/default/objects/PageLayoutUpdate__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Denotes the nature of the result message, e.g. success, warning, error.</description>
    <label>Severity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>